# turn_micro_types

./: .gitignore  README.md  example.py  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/workflows/: black.yml  close-stale-prs.yml  flake8.yml  pip-audit.yml  typings.yml
src/stubs/turn_micro_types/worker_micro/responses/PartnerWorker/: constants.pyi
src/turn_micro_types.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/turn_micro_types/auth/: internal_auth_service.py  scopes.py  token.py
src/turn_micro_types/checks_service/: constants.py
src/turn_micro_types/checks_service/dispositions/: constants.py
src/turn_micro_types/checks_service/dispositions/requests/: classify.py
src/turn_micro_types/checks_service/dispositions/responses/: classify.py
src/turn_micro_types/checks_service/requests/: __init__.py
src/turn_micro_types/checks_service/requests/request_check/: __init__.py
src/turn_micro_types/checks_service/responses/: __init__.py
src/turn_micro_types/cohort_service/invitation/: constants.py
src/turn_micro_types/communications_protocol/: constants.py
src/turn_micro_types/communications_protocol/requests/: support_email.py
src/turn_micro_types/misc/: us_states.py
src/turn_micro_types/turn_state_machine/: __init__.py  exception.py
src/turn_micro_types/worker_micro/responses/PartnerWorker/: constants.py
stubs/turn_micro_types/auth/: scopes.pyi  token.pyi
stubs/turn_micro_types/turn_state_machine/: __init__.pyi  exception.pyi
(+3 files in other folders)
