[project]
name = "turn_micro_types"
version = "0.0.1"
authors = [
  { name="David Cook", email="david@turn.ai" },
]
description = "Client library for connecting with Turn's notifications microservice."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic >=1.10.5",
    "typing-extensions >= 4.4.0",
    "mypy >= 1.0.1"
]

[options]
package_dir="src"
include_package_data = true

[options.packages.find]
where="src"

[tool.setuptools.package-data]
turn_micro_types = ["src/py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"